<?xml version="1.0" encoding="UTF-8"?>
<!--
  ObtuseLoot — pom.xml
  ─────────────────────────────────────────────────────────────────────────────
  Local build:  mvn -B -ntp clean package
  Publish:      mvn -B -ntp clean deploy
  Output:       target/obtuseloot-<version>.jar
  ─────────────────────────────────────────────────────────────────────────────

  All Bukkit/Paper/Adventure APIs are provided by the Purpur server JAR at
  runtime — they are declared "provided" here so they are NOT bundled into the
  plugin JAR. The plugin JAR therefore contains only ObtuseLoot's own compiled
  classes and plugin.yml, with zero extra dependencies to shade.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.falcoignis</groupId>
    <artifactId>obtuseloot</artifactId>
    <version>0.9.6</version>
    <packaging>jar</packaging>

    <name>ObtuseLoot</name>
    <description>Procedural loot generation with soul-bound particle effects.</description>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <!-- Purpur API repository -->
        <repository>
            <id>purpur</id>
            <url>https://repo.purpurmc.org/snapshots</url>
        </repository>
    </repositories>

    <dependencies>
        <!--
          Purpur API — "provided" because the full server JAR supplies this
          at runtime. Never bundled into the plugin JAR.

          Check https://repo.purpurmc.org/snapshots/org/purpurmc/purpur/purpur-api/
          for the exact build string for your server version.
          The version below targets Purpur 1.21.1.
        -->
        <dependency>
            <groupId>org.purpurmc.purpur</groupId>
            <artifactId>purpur-api</artifactId>
            <version>1.21.1-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.46.1.3</version>
        </dependency>
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>8.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.11.4</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <!-- The final JAR is named obtuseloot-{version}.jar -->
        <finalName>ObtuseLoot-${project.version}</finalName>

        <plugins>
            <!--
              maven-enforcer-plugin — fail fast with a clear message when the
              local JDK is too old to compile Java 21 bytecode.
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>enforce-java</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>[21,)</version>
                                    <message>
                                        ObtuseLoot requires JDK 21+ for builds. Current runtime is too old.
                                        Set JAVA_HOME to a JDK 21+ installation and rerun Maven.
                                    </message>
                                </requireJavaVersion>
                            </rules>
                            <fail>true</fail>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!--
              maven-compiler-plugin — compile to Java 21 with full records,
              sealed classes, and switch expressions support (all used by this plugin).
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <!--
              maven-jar-plugin — ensures plugin.yml from src/main/resources
              is included at the root of the JAR (required by Bukkit's plugin loader).
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
            </plugin>
        </plugins>

        <!--
          src/main/resources is the standard Maven location for non-Java files
          that need to end up at the root of the compiled JAR.
          plugin.yml must live here so Bukkit can find it on load.
        -->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
            </resource>
        </resources>
    </build>

</project>
